--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>BuzzMeet</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Google AdSense script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9013540088743372" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -36,11 +39,22 @@
         <a href="text-chat.html" class="btn btn-secondary btn-lg m-2">Start Text Chat</a>
     </section>
 
+    <!-- Google AdSense Ad after Hero Section -->
+    <div class="ad-container text-center my-4">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-9013540088743372"
+             data-ad-slot="YOUR_AD_SLOT"
+             data-ad-format="auto"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
     <!-- Security Section -->
     <section class="container my-5">
         <h2 class="text-center">User Security & Privacy</h2>
-        <p class="text-center">BuzzMeet prioritizes your security. Every interaction is encrypted, ensuring your chats
-            stay private and safe.</p>
+        <p class="text-center">BuzzMeet prioritizes your security. Every interaction is encrypted, ensuring your chats stay private and safe.</p>
     </section>
 
     <!-- Subscription Section -->
@@ -48,6 +62,18 @@
         <h2>Subscribe for an Ad-Free Experience</h2>
         <p>Enjoy more features and an uninterrupted experience by subscribing or watching ads.</p>
         <a href="subscription.html"><button class="btn btn-success btn-lg">Subscribe Now</button></a>
+
+        <!-- Google AdSense Ad inside Subscription Section -->
+        <div class="ad-container text-center my-4">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-9013540088743372"
+                 data-ad-slot="YOUR_AD_SLOT"
+                 data-ad-format="auto"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
         <br><br><br><br><br><br><br><br>
     </section>
 
