--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <title>BuzzMeet</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta name="google-adsense-account" content="ca-pub-9013540088743372">
     <link rel="stylesheet" href="style.css">
 
     <!-- Google AdSense script -->
