--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-9013540088743372"
-                 data-ad-slot="YOUR_AD_SLOT"
+                 data-ad-slot="7911476776"
                  data-ad-format="auto"></ins>
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
